manifests/03-networkpolicy-operator-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: openshift-console-operator
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    capability.openshift.io/name: Console
    kubernetes.io/description: >-
      Default deny all ingress and egress traffic in the
      openshift-console-operator namespace. The policy improves
      network isolation by ensuring that pods only communicate
      through explicitly allowed policies.
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
